preventing select descenders from being cut off

--- a/frontend/src/components/layout.scss
+++ b/frontend/src/components/layout.scss
@@ -110,7 +110,7 @@ body {
     height: 42px;
     width: 100%;
     margin-top: $fontSizeBase;
-    padding: 0px 28px 0 12px;
+    padding: 0 28px 3px 12px;
     background: rgba(white, 0.1)
       url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 7.2'%3E%3Cpath style='fill:%23000000' d='M0,1.6,6,7.2l6-5.6L10.4,0,6,4,1.6,0Z'/%3E%3C/svg%3E")
       right 13px top 15px / 10px 12px no-repeat;
@@ -118,7 +118,7 @@ body {
     border-radius: 0px;
     cursor: pointer;
     font-size: 16px;
-    line-height: 1;
+    line-height: 1.25;
     text-indent: 0;
     transition: background-color 0.15s ease;
     color: black;
